# frautnEM

./: .gitignore  README.md  setup.cfg  to-do.txt
frautnEM/: puntuales.py
src/frautnEM/: puntuales.py
src/frautnEM.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: todo.txt
