[metadata]
name = frautnEM
version = 0.0.4
author = Edgardo Palazzo
author_email = epalazzo@fra.utn.edu.ar
description = A set of library functions to be used in courses of electromagnetism.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/frautn/frautnEM
project_urls =
    Bug Tracker = https://github.com/frautn/frautnEM/issues
    repository = https://github.com/frautn/frautnEM
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src